# cudatest

./: 1.cu  CMakeLists.txt  TriangleMeshDistance.h
